syntax = "proto3";

option csharp_namespace = "GrpcServer";

service SpringSelection{
	rpc SpringSignSelection(SpringRequest) returns (SpringResponse);
}

message SpringRequest{
	string date=1;
}


message SpringResponse{
  string sign=1;
}
